--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CRMS</title>
+    <title>client</title>
   </head>
-  <body ng-app="mum" ng-strict-di>
+  <body ng-app="car" ng-strict-di>
     <section ui-view></section>
     <script src="js/app.js"></script>
   </body>
