list cars works

--- a/client/src/home/home.html
+++ b/client/src/home/home.html
@@ -6,9 +6,19 @@
 </ul>
 <main role="main" class="container pt-5" ui-view>
   <div class="starter-template">
-    <h1>Bootstrap starter template</h1>
-    <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+    <h1>Select your car</h1>
+    <p class="lead">Fairfield Rent Car.</p>
   </div>
-  <div car-table data="tableData"></div>
-
+  <div class="card-columns">
+    <div class="card" style="width: 18rem;" ng-repeat="car in cars">
+      <img class="card-img-top" src="https://loremflickr.com/150/150/car" alt="Car Image">
+      <div class="card-body">
+        <h4 class="card-title">{{car.brand}}</h4>
+        <p class="card-text">Model: {{car.model}}</p>
+        <p class="card-text">Status: {{car.status}}</p>
+        <p class="card-text">Seats: {{car.num_of_seat}}</p>
+        <a href="#" class="btn btn-primary">Select Car</a>
+      </div>
+    </div>
+  </div>
 </main><!-- /.container -->
